--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ __pycache__/
 *.swp
 *.swo
 .dockerignore
+.venv
 
 # OS
 .DS_Store
@@ -29,6 +30,7 @@ htmlcov/
 
 # Streamlit
 .streamlit/secrets.toml
+.streamlit 
 
 docs/archive
 models_archive/
